--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/data
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,node,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,node,python
 
@@ -139,6 +140,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
 
 # yarn v2
 .yarn/cache
