feat: duckdb import data

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,node,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,node,python
 
+src/data/taxi_data.duckdb
+src/data/raw/*
 ### Linux ###
 *~
 
