--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ pandas==2.2.0
 pyarrow==15.0.0
 fastparquet==2024.2.0
 duckdb==0.10.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+sqlalchemy==2.0.25
