--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,9 @@ web_modules/
 .env.production.local
 .env.local
 
+# DLT secrets
+.dlt/secrets.toml
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
