--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       MONGO_DB: ${MONGO_DB:-nyc_taxi_clean}
       MONGO_HOST: mongodb
       MONGO_PORT: 27017
-      PYTHONPATH: /app/src
+      PYTHONPATH: /app:/app/src
     ports:
       - "8000:8000"
     volumes:
